stills needs logical wprk